<resources>
    <!--CREDENCIALES APLICATIVO-->
    <string name="app_name">Tickets Manager</string>
    <string name="developer">Franco Cervera</string>
    <string name="desarrollo">Desarrollado por:</string>
    <string name="version">Version 1.0.0</string>

    <!--MAIN-->
    <string name="btn_administrador">Administrador</string>
    <string name="btn_tecnico">Técnico</string>
    <string name="btn_trabajador">Trabajador</string>


    <!--LOGIN-->
    <string name="titulo_login">Ingrese sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese ID usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_changePassword">Cambiar contraseña</string>
    <string name="lbl_crear_cuenta">No tenés cuenta?, Registrate</string>

    <!--REGISTRO-->
    <string name="lbl_usuario_registro">Usuario</string>
    <string name="txt_usuario_registro">Ingrese usuario</string>
    <string name="lbl_password_registro">Contraseña</string>
    <string name="txt_password_registro">Ingrese contraseña</string>
    <string name="lbl_tipo_usuario">Tipo de Usuario</string>
    <string name="txt_tipo_usuario">Ingrese Tipo de Usuario</string>
    <string name="btn_registrar">Registrar</string>
    <string-array name="tipo_usuario_admin">
        <item>Administrador</item>
    </string-array>
    <string-array name="roles_array">
        <item>Administrador</item>
        <item>Trabajador</item>
        <item>Tecnico</item>
    </string-array>

    <!--CAMBIAR PASS-->
    <string name="edt_ID_usuario">Ingrese el ID del Usuario</string>
    <string name="edt_Pass">Ingrese la password actual</string>
    <string name="edt_newPass">Ingrese la nueva password</string>
    <string name="edt_ConfirmPass">Confirme nueva password</string>


    <!--MENSAJE-->
    <string-array name="asunto_mensaje">
        <item>Reabrir ticket</item>
        <item>Desbloquear acceso</item>
        <item>Blanquear contraseña</item>
    </string-array>


    <!--MAS DATOS-->
</resources>